--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
-spring.mvc.hiddenmethod.filter.enabled=true
 spring.main.allow-bean-definition-overriding=true
+spring.security.manager.enabled=false
